test/compile_errors/err_move_not_closure.w
//! expect-check-fail: 'move' must be applied to a binding identifier
fn main:
    let x = move 42
